all CRUD operations work, fully functional database

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,6 +13,8 @@
        <a href="/">Home</a>
        <br>
        <a href="/products">Products</a>
+       <br>
+       <a href="/products/new">Add new product</a>
      </nav>
    </h2>
      </header>
