--- a/views/product-views/products-list-view.ejs
+++ b/views/product-views/products-list-view.ejs
@@ -2,5 +2,23 @@
 <ul>
 <% productsAndStuff.forEach((oneProduct) => {  %>
      <li> <%= oneProduct.name  %>
-      <p>$<%= oneProduct.price %> </li>
+      <p>$<%= oneProduct.price %> </p>
+
+      <a href="/products/<%= oneProduct._id %>/details">
+         View details
+     </a>
+       <br><br>
+       <a href="/products/<%= oneProduct._id %>/update">
+          Edit Product
+      </a>
+        <br>
+        <!-- <a href="/products/delete?myId=<%= oneProduct._id %>"> -->
+           <!-- Delete Product -->
+       </a>
+         <br>
+         <!-- this can be either post or get method -->
+         <form method="post" action="/products/<%= oneProduct._id %>/delete">
+           <button> Delete Button (POST) </button>
+         </form>
+      </li>
 <% });  %>
